Add font and cyrilics

--- a/Chess/imgui.ini
+++ b/Chess/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=643,150
+Pos=661,135
 Size=507,463
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=147,132
-Size=420,443
+Pos=36,78
+Size=528,546
 Collapsed=0
 
 [Window][Another Window]
@@ -26,5 +26,25 @@ Collapsed=0
 [Window][Example: Console]
 Pos=13,110
 Size=520,600
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=541,714
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=332,301
+Collapsed=0
+
+[Window][ImGui Metrics]
+Pos=60,60
+Size=325,251
 Collapsed=0
 
