--- a/Chess/Chess.vcxproj
+++ b/Chess/Chess.vcxproj
@@ -57,7 +57,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
-      <AdditionalOptions>glfw3.lib imgui.lib vulkan-1.lib %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>glfw3.lib imGUI.lib vulkan-1.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -73,15 +73,17 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalOptions>glfw3.lib imgui.lib vulkan-1.lib %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>glfw3.lib imGUI.lib vulkan-1.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Src\imgui_impl_glfw.cpp" />
     <ClCompile Include="Src\imgui_impl_vulkan.cpp" />
     <ClCompile Include="Src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="Src\imgui_impl_glfw.h" />
     <ClInclude Include="Src\imgui_impl_vulkan.h" />
   </ItemGroup>
