--- a/Chess/imgui.ini
+++ b/Chess/imgui.ini
@@ -1,25 +1,25 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=410,160
 Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=661,135
-Size=507,463
-Collapsed=0
+Pos=729,50
+Size=905,782
+Collapsed=1
 
 [Window][Hello, world!]
-Pos=36,78
+Pos=247,82
 Size=528,546
 Collapsed=0
 
 [Window][Another Window]
-Pos=257,382
+Pos=103,336
 Size=198,71
 Collapsed=0
 
 [Window][Example: Log]
-Pos=59,262
+Pos=410,306
 Size=500,400
 Collapsed=0
 
@@ -46,5 +46,15 @@ Collapsed=0
 [Window][ImGui Metrics]
 Pos=60,60
 Size=325,251
+Collapsed=0
+
+[Window][Chess]
+Pos=414,179
+Size=290,363
+Collapsed=0
+
+[Window][ ]
+Pos=525,160
+Size=230,400
 Collapsed=0
 
